--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Meio ambiente</title>
+    <title>Você decide o futuro da IA</title>
 </head>
 
 <body>
     <div class="caixa-principal">
         <h1>Meio ambiente</h1>
         <div class="tela-inicial">
-            <p>A preocupação com o meio ambiente tem crescido significativamente nas últimas décadas, à medida que os impactos das atividades humanas se tornam mais evidentes. Desde mudanças climáticas até a perda de biodiversidade, os desafios ambientais exigem uma ação urgente e coordenada. Nesta introdução, exploraremos como as questões ambientais afetam nossa sociedade globalmente e as estratégias necessárias para promover um desenvolvimento sustentável.
+            <p>Novembro de 2022, a humanidade se viu em uma realidade perturbadora.
+                De repente, percebemos que as máquinas evoluíram para além do que imaginávamos.
+                Agora, elas escrevem e falam de um jeito tão parecido com humanos que é quase impossível diferenciar
+                quem foi que escreveu ou falou o que.
+                Em meio a esse caos de identidade, uma missão surgiu.
+                Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as
+                possibilidades que o futuro nos reserva.
+                O mundo nunca mais será o mesmo.
             </p>
             <button class="iniciar-btn">Iniciar</button>
         </div>
